data/derived/comb/progs/unify/prog7441.ml.out
Characters 73-75:
  if k = h2 then h1
         ^^
Error: This expression has type 'a but an expression was expected of type
         ('b * 'a) list
       The type variable 'a occurs inside ('b * 'a) list
